kubernetes/apps/loki-stack/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClass: nginx
  rules:
    - host: loki.70ld.home
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: loki-svc
                port:
                  number: 80
